some spacing fixed in latest deal section

--- a/styles/shop.css
+++ b/styles/shop.css
@@ -287,7 +287,7 @@ main {
 .latest-deals-description {
   font-family: "Inter", sans-serif;
   font-size: 1.375rem;
-  margin: 0 0 120px;
+  margin: 0 0 100px;
   color: var(--text-secondary);
 }
 
